# Jotta

./: .gitignore  CMakeLists.txt  README.md  test.db
jotta_server/: manage.py
jotta_server/jotta/: models.py
jotta_server/jotta_server/: settings.py  urls.py  wsgi.py
src/: loggers.hpp  result.hpp
test/: scoped_timer.hpp  test.cpp
